@@ -2,17 +2,21 @@
 #include "sdk.h"
 #include "utils.h"
 
-void init_debug(){
- SceUID fd;
- if ((fd = sceIoOpen(DEBUG_PATH, PSP_O_CREAT | PSP_O_WRONLY | PSP_O_TRUNC, 0777)) >= 0)
- {
-    sceIoClose(fd);
-  }
+void init_debug()
+{
+	SceUID fd;
+	
+	if ((fd = sceIoOpen(DEBUG_PATH, PSP_O_CREAT | PSP_O_WRONLY | PSP_O_TRUNC, 0777)) >= 0)
+	{
+		sceIoClose(fd);
+	}
 }
 
-void write_debug_newline (const char* description){
-  write_debug(description, "\n", 1);
+void write_debug_newline (const char* description)
+{
+	write_debug(description, "\n", 1);
 }
+
 // Debugging log function
 void write_debug(const char* description, void* value, unsigned int size)
 {
